apps/mainapp/manifests/gke/gke-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: applications
  name: mainapp-pingpong-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mainapp-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 80
